 * a bug in configuration validation for files sources was fixed
 * a bug in validating the licences attribute in source configurations was
   fixed
 * the location of a patch that does not apply is included in the error
   message now
 * unused code was removed
 * the faq section in the documentation was extended
 * outdated documentation was removed
 * a bug was fixed that lead to partial results being left on local servers
   or in the cache when copying was interrupted
 * storing results to cache and to servers is optimized by trying to
   create hardlinks if possible. This may fail due to filesystem boundaries.
   In that case the code falls back to copying.
   Hardlinking is not possible if push_permissions is set for the particular
   server.
 * the configuration file format for chroot and licence configuration files
   has changed to prepare for configuring per-file checksums where files
   are referenced
 * sha1 checksums must be configured in the source-, licence- and chroot
   configuration now where files are referenced. Exceptions are allowed
   for files stored in the project configuration tree (on the "." server)
 * fix the bug that the project name configuratino from `proj/config` did
   not influence the BuildId

e2factory-2.3.1
 * bugfixes

e2factory-2.3.1rc1
 * bugfixes, documentation

e2factory-2.3.1pre1
 * bugfixes
 * support grouping source and result configuration by allowing
   subdirectories in the res/ and src/ directories
 * support extension packages (see README.extensions)
 * move all build time configuration to a single lua module
 * split up the version string into parts, move all occurrences of version
   information into one place

e2factory-2.3.0
 * INSTALL documentation changes

e2factory 2.3.0pre3
 * synchronize default e2factory local version again

e2factory 2.3.0pre2
 * change email addresses

e2factory 2.3.0pre1
 * create free software package
 * almost no changes to the source since e2factory 2.2.0