@@ -1,0 +1,10 @@
+-- e2 factory environment configuration file --
+env {
+	-- global variables
+	-- key = "val",
+
+	-- result specific variables (only available in <result>)
+	-- <result> = {
+	-- 	key = "val",
+	-- },
+}
