@@ -1,0 +1,3 @@
+-- e2 factory licence configuration file --
+e2licence {
+}
