@@ -1,0 +1,30 @@
+# e2 factory build script template
+#
+# The build system provides the following variables for use in build scripts:
+# - TMPDIR       pointing to a temporary directory with a directory structure
+# - RESULT       the name of the result currently building
+# - BUILD_NUMBER the build number, 0 by default
+#
+# Additional variables can be provided in init files.
+# Variables are not exported unless the init files do.
+#
+# The following directory structure is available, relative to TMPDIR
+#
+# ./build/<sourcename>	sources are located here
+# ./root		shall be used as the destination directory when
+# 			installing software for packaging
+# ./env			files containing environment variables are located here
+# ./init		init scripts are located here
+# ./script		this directory holds the build driver and the build 
+# 			script
+# ./in			This directory is available but unused
+# ./dep/<dependency>	These directories hold result files from dependency
+# 			results
+# ./out			Files that are left here are packaged into the result
+#			finally.
+#
+
+# simple example: just extract and repackage everything
+find /
+tar -C ${E2_TMPDIR}/root -xzvf ${E2_TMPDIR}/dep/helloworld/helloworld.tar.gz
+tar -C ${E2_TMPDIR}/root -czvf ${E2_TMPDIR}/out/${E2_RESULT}.tar.gz .
