@@ -1,0 +1,13 @@
+-- e2 factory result configuration template --
+
+e2result {
+	-- a list of sources
+	sources = { },
+	-- a list of dependencies
+	depends = { "helloworld", },
+	-- a list of chroot groups
+	chroot = { },
+	-- use the collect_project feature for this result?
+	collect_project = false,
+	-- collect_project_default_result = "<result>",
+}
